fix text overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -88,3 +88,7 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.text-wrap-container {
+  overflow-wrap: break-word;
+}
